--- a/css/style.css
+++ b/css/style.css
@@ -2871,6 +2871,7 @@ box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.11);
 overflow: hidden;
     margin: 0 15px;
     margin-bottom: 30px;
+    height: 590px;
 }
 .services11 .services-box-05{
     margin-right: 0;
